--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "react-hot-loader": "next",
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.3",
@@ -21,6 +22,7 @@
     "material-ui": "^0.18.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-inline-grid": "^0.5.3"
+    "react-inline-grid": "^0.5.3",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
