--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
+    "@types/lodash.assign": "^4.2.2",
+    "@types/material-ui": "^0.17.10",
+    "@types/react": "^15.0.27",
+    "@types/react-dom": "^15.5.0",
     "@types/react-tap-event-plugin": "^0.0.30",
     "react-hot-loader": "next",
     "ts-loader": "^2.1.0",
@@ -15,10 +19,8 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "@types/material-ui": "^0.17.10",
-    "@types/react": "^15.0.27",
-    "@types/react-dom": "^15.5.0",
     "highlight.js": "^9.12.0",
+    "lodash.assign": "^4.2.0",
     "material-ui": "^0.18.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
