--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "customskinloader-gui-react",
   "version": "0.1.0",
-  "main": "index.js",
   "author": "GPlane",
   "license": "MIT",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "build": "cross-env NODE_ENV=production webpack"
+  },
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
     "@types/lodash.assign": "^4.2.2",
@@ -11,8 +14,12 @@
     "@types/react": "^15.0.27",
     "@types/react-dom": "^15.5.0",
     "@types/react-tap-event-plugin": "^0.0.30",
+    "awesome-typescript-loader": "^3.1.3",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "next",
-    "ts-loader": "^2.1.0",
+    "style-loader": "^0.18.2",
     "tslint": "^5.4.3",
     "typescript": "^2.3.4",
     "webpack": "^2.6.1",
