--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-loader": "next",
     "style-loader": "^0.18.2",
     "tslint": "^5.4.3",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
