--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "pack": "gulp pack"
   },
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
@@ -17,6 +18,9 @@
     "awesome-typescript-loader": "^3.1.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "execa": "^0.7.0",
+    "gulp": "^3.9.1",
+    "gulp-zip": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "next",
     "style-loader": "^0.18.2",
