--- a/package.json
+++ b/package.json
@@ -6,10 +6,26 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack",
-    "pack": "gulp pack"
+    "pack": "gulp pack",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json",
+      "jsx"
+    ]
   },
   "devDependencies": {
+    "@types/enzyme": "^2.8.1",
     "@types/highlight.js": "^9.1.9",
+    "@types/jest": "^20.0.2",
     "@types/lodash.assign": "^4.2.2",
     "@types/material-ui": "^0.17.10",
     "@types/react": "^15.0.27",
@@ -18,12 +34,16 @@
     "awesome-typescript-loader": "^3.1.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "execa": "^0.7.0",
     "gulp": "^3.9.1",
     "gulp-zip": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^20.0.4",
     "react-hot-loader": "next",
+    "react-test-renderer": "^15.6.1",
     "style-loader": "^0.18.2",
+    "ts-jest": "^20.0.7",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.3.4",
