--- a/package.json
+++ b/package.json
@@ -1,62 +1,28 @@
 {
-  "name": "customskinloader-gui-react",
-  "version": "0.2.0",
-  "author": "GPlane",
+  "private": false,
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack",
-    "pack": "gulp pack",
-    "test": "jest"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json",
-      "jsx"
-    ]
-  },
-  "devDependencies": {
-    "@types/enzyme": "^2.8.1",
-    "@types/highlight.js": "^9.1.9",
-    "@types/jest": "^20.0.2",
-    "@types/lodash.assign": "^4.2.2",
-    "@types/material-ui": "^0.17.10",
-    "@types/react": "^15.0.27",
-    "@types/react-dom": "^15.5.0",
-    "@types/react-tap-event-plugin": "^0.0.30",
-    "awesome-typescript-loader": "^3.1.3",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "enzyme": "^2.9.1",
-    "execa": "^0.7.0",
-    "gulp": "^3.9.1",
-    "gulp-zip": "^4.0.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jest": "^20.0.4",
-    "react-hot-loader": "next",
-    "react-test-renderer": "^15.6.1",
-    "style-loader": "^0.18.2",
-    "ts-jest": "^20.0.7",
-    "tslint": "^5.4.3",
-    "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "start": "snowpack dev",
+    "build": "snowpack build",
+    "fmt": "prettier --write --plugin-search-dir=. src snowpack.config.js"
   },
   "dependencies": {
-    "highlight.js": "^9.12.0",
-    "lodash.assign": "^4.2.0",
-    "material-ui": "^0.18.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-inline-grid": "^0.5.3",
-    "react-tap-event-plugin": "^2.0.1"
+    "@shoelace-style/shoelace": "^2.0.0-beta.19",
+    "highlight.js": "^10.2.1",
+    "svelte": "^3.24.0",
+    "svelte-dnd-action": "^0.6.2"
+  },
+  "devDependencies": {
+    "@gplane/tsconfig": "^2.0.0",
+    "@snowpack/app-scripts-svelte": "^1.8.5",
+    "@snowpack/plugin-dotenv": "^2.0.1",
+    "@snowpack/plugin-optimize": "^0.2.3",
+    "@snowpack/plugin-run-script": "^2.1.2",
+    "@snowpack/plugin-svelte": "^2.0.4",
+    "prettier": "^2.1.2",
+    "prettier-plugin-svelte": "^1.4.0",
+    "snowpack": "^2.13.0",
+    "svelte-check": "^1.0.0",
+    "svelte-preprocess": "^4.3.2"
   }
 }
