--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,5 +9,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: pnpm/action-setup@v1.2.0
       with:
+        version: 5.8.0
         run_install: true
     - run: pnpm test
