--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier-plugin-svelte": "^2.2.0",
     "snowpack": "^3.1.2",
     "svelte-check": "^1.2.6",
+    "svelte-hmr": "^0.14.0",
     "svelte-preprocess": "^4.6.9",
     "typescript": "^4.2.3"
   }
