--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@shoelace-style/shoelace": "^2.0.0-beta.34",
     "highlight.js": "^10.7.1",
     "svelte": "^3.35.0",
-    "svelte-dnd-action": "^0.9.1"
+    "svelte-dnd-action": "^0.9.1",
+    "svelte-i18n": "^3.3.7"
   },
   "devDependencies": {
     "@gplane/tsconfig": "^4.2.0",
