--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "license": "MIT",
   "type": "module",
+  "packageManager": "pnpm@8.6.10",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
